simplify (#469)
* remove old compatibility versions

* remove 1.12 compatible commands

* remove "devMode" since no old versions are used anymore

* migrate version checking and reflection to new ReflectionUtil

* start conversion to jorel's command api

* simplify test cases, because MockBukkit is above my pay grade

* Remove all old lib files

* fix list format getting an extra '<>'

* update serializer exceptions to be a bit more concise

* update serializers to new optional system

* update to gradle 8.11.1 and paperweight 2.0.0

* update weaponmechanics serializers to new optional system

* spotlessApply

* convert weaponmechanics commands to jorel's command api

* convert the rest of the weapon mechanics serializers

* update attributes to the new system. Add support for operations

* remove support for "Broken_Item"

* remove unused compatibility methods

* switch to packetevents

* fix bstats not being included

* first build. Update libs, add compatibility for 1.21.4

* update xseries, fix serializer typos

* update adventureChatAPI

* fix typos in serializer conversions

* convert BlockDamage to use 'BlockType' registry instead of Material enum

* convert ListHolders to use registries instead of enums

* try harder to look for matching keys instead of throwing errors

* update configs to 1.21.4

* update creaking hitbox

* fix recoil doing horrible things to the screen (random teleporting)

* fix delay being 0 sometimes, fix test command not working

* fix scoping causing client crashes

* clean up code a bit, javadoc formatting, etc.

* don't auto serialize null keywords

* switch to a slightly "smarter" damage sourcing system

* coerce at least 1 for all statistics

* remove old yaml files... they are outdated

* remove totem handling from compatibility code

* spotlessApply

* Cj/simplify recoil (#484)

* use a damping system instead of linear interpolation

* fix recoil s