@@ -1,6 +1,8 @@
 package me.deecaad.core.file.serializers;
 
-import com.cryptomorin.xseries.XMaterial;
+import com.cjcrafter.foliascheduler.util.FieldAccessor;
+import com.cjcrafter.foliascheduler.util.MinecraftVersions;
+import com.cjcrafter.foliascheduler.util.ReflectionUtil;
 import com.cryptomorin.xseries.profiles.builder.XSkull;
 import com.cryptomorin.xseries.profiles.objects.ProfileInputType;
 import com.cryptomorin.xseries.profiles.objects.Profileable;
@@ -9,26 +11,33 @@ import me.deecaad.core.compatibility.CompatibilityAPI;
 import me.deecaad.core.compatibility.nbt.NBTCompatibility;
 import me.deecaad.core.file.SerializeData;
 import me.deecaad.core.file.Serializer;
-import me.deecaad.core.file.SerializerEnumException;
 import me.deecaad.core.file.SerializerException;
-import me.deecaad.core.file.SerializerOptionsException;
-import me.deecaad.core.file.SerializerRangeException;
-import me.deecaad.core.file.SerializerTypeException;
+import me.deecaad.core.file.simple.BooleanSerializer;
+import me.deecaad.core.file.simple.ByNameSerializer;
+import me.deecaad.core.file.simple.CsvSerializer;
+import me.deecaad.core.file.simple.DoubleSerializer;
+import me.deecaad.core.file.simple.EnumValueSerializer;
+import me.deecaad.core.file.simple.IntSerializer;
+import me.deecaad.core.file.simple.RegistryValueSerializer;
+import me.deecaad.core.file.simple.StringSerializer;
 import me.deecaad.core.utils.AdventureUtil;
-import me.deecaad.core.utils.AttributeType;
-import me.deecaad.core.utils.EnumUtil;
-import me.deecaad.core.utils.MinecraftVersions;
-import me.deecaad.core.utils.ReflectionUtil;
-import net.kyori.adventure.text.Component;
 import org.bukkit.Bukkit;
 import org.bukkit.Color;
 import org.bukkit.FireworkEffect;
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
-import org.bukkit.Registry;
+import org.bukkit.Sound;
+import org.bukkit.Tag;
+import org.bukkit.attribute.Attribute;
+import org.bukkit.attribute.AttributeModifier;
+import org.bukkit.block.BlockType;
 import org.bukkit.block.data.Levelled;
 import org.bukkit.configuration.ConfigurationSection;
+import org.bukkit.damage.DamageType;
 import org.bukkit.enchantments.Enchantment;
+import org.bukkit.entity.EntityType;
+import org.bukkit.inventory.EquipmentSlot;
+import org.bukkit.inventory.EquipmentSlotGroup;
 import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.RecipeChoice;
@@ -40,30 +49,33 @@ import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.LeatherArmorMeta;
 import org.bukkit.inventory.meta.PotionMeta;
 import org.bukkit.inventory.meta.SkullMeta;
+import org.bukkit.inventory.meta.components.EquippableComponent;
+import org.bukkit.inventory.meta.components.FoodComponent;
+import org.bukkit.inventory.meta.components.ToolComponent;
 import org.bukkit.inventory.meta.trim.ArmorTrim;
 import org.bukkit.inventory.meta.trim.TrimMaterial;
 import org.bukkit.inventory.meta.trim.TrimPattern;
+import org.bukkit.tag.DamageTypeTags;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
-import java.lang.reflect.Field;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
+import java.util.Optional;
+import java.util.OptionalInt;
 import java.util.Set;
 import java.util.UUID;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 public class ItemSerializer implements Serializer<ItemStack> {
 
     public static final Map<String, Supplier<ItemStack>> ITEM_REGISTRY = new HashMap<>();
 
-    private static final Field ingredientsField;
+    private static final FieldAccessor ingredientsField;
 
     static {
         ingredientsField = ReflectionUtil.getField(ShapedRecipe.class, "ingredients");
@@ -84,7 +96,7 @@ public class ItemSerializer implements Serializer<ItemStack> {
 
         // When the key is null, that probably means we are currently in an
         // inline serializer. Skip the fancy shit.
-        if (data.key == null) {
+        if (data.getKey() == null) {
             ItemStack itemStack = serializeWithoutRecipe(data);
             applyTags(itemStack, tags);
             itemStack = serializeRecipe(data, itemStack);
@@ -112,196 +124,224 @@ public class ItemSerializer implements Serializer<ItemStack> {
             String plugin = split[0];
             String tag = split[1];
 
-            if (entry.getValue() instanceof String string)
-                nbt.setString(item, plugin, tag, string);
-            else if (entry.getValue() instanceof Double num)
-                nbt.setDouble(item, plugin, tag, num);
-            else if (entry.getValue() instanceof Integer num)
-                nbt.setInt(item, plugin, tag, num);
-            else if (entry.getValue() instanceof int[] arr)
-                nbt.setArray(item, plugin, tag, arr);
-            else if (entry.getValue() instanceof String[] arr)
-                nbt.setStringArray(item, plugin, tag, arr);
-            else
-                throw new IllegalArgumentException("Unrecognized type " + entry.getValue() + " when setting custom tags");
+            switch (entry.getValue()) {
+                case String string -> nbt.setString(item, plugin, tag, string);
+                case Double num -> nbt.setDouble(item, plugin, tag, num);
+                case Integer num -> nbt.setInt(item, plugin, tag, num);
+                case int[] arr -> nbt.setArray(item, plugin, tag, arr);
+                case String[] arr -> nbt.setStringArray(item, plugin, tag, arr);
+                case null, default -> throw new IllegalArgumentException("Unrecognized type " + entry.getValue() + " when setting custom tags");
+            }
         }
     }
 
-    public ItemStack attemptInline(@NotNull SerializeData data) throws SerializerException {
-        try {
+    public @Nullable ItemStack attemptInline(@NotNull SerializeData data) throws SerializerException {
+        // If the data here is a String (not a ConfigurationSection), then we
+        // can assume that the user is trying to inline an item.
+        if (data.of().is(String.class)) {
+            String inlineString = data.of().assertExists().get(String.class).get();
+            if (ITEM_REGISTRY.containsKey(inlineString))
+                return ITEM_REGISTRY.get(inlineString).get();
 
-            // Check the ITEM_REGISTRY to see if they are trying to inline
-            // an item... Like pathto in serializers but easier.
-            String registry = data.of().assertType(String.class).assertExists().get();
-            if (ITEM_REGISTRY.containsKey(registry))
-                return ITEM_REGISTRY.get(registry).get();
-
-            // Support for one-liner item serializer
-            XMaterial type = data.of().assertExists().getMaterial(null);
-            if (type != null) {
-                ItemStack parsed = type.parseItem();
-                if (parsed == null) {
-                    throw data.exception("Type", "Your version, " + MinecraftVersions.getCURRENT() + ", doesn't support '" + type.name() + "'",
-                        "Try using a different material or update your server to a newer version!");
-                }
-                return parsed;
-            }
-        } catch (SerializerTypeException ex) {
-            // We only catch **TYPE** exceptions, since when this element is
-            // NOT a 1 liner, the type exception will be thrown.
-        } catch (SerializerEnumException ex) {
-            // We catch the ENUM exception since we want to compare it against
-            // the ITEM_REGISTRY as well. For example, steel_sheet from the
-            // registry should be included as a valid option.
-            Collection<String> options = ex.getOptions();
-            options.addAll(ITEM_REGISTRY.keySet());
-            throw new SerializerOptionsException(ex.getSerializerName(), "Material", options, ex.getActual(), data.of().getLocation())
-                .addMessage("https://github.com/WeaponMechanics/MechanicsMain/wiki/References#materials");
+            return data.of().assertExists().getMaterialAsItem().get();
         }
 
         return null;
     }
 
     public ItemStack serializeWithoutRecipe(@NotNull SerializeData data) throws SerializerException {
-
-        // TODO Add byte data support using 'Data:' or 'Extra_Data:' key
-        XMaterial type = data.of("Type").assertExists().getMaterial(null);
-        ItemStack itemStack = type.parseItem();
-
-        if (itemStack == null) {
-            throw data.exception("Type", "Your version, " + MinecraftVersions.getCURRENT() + ", doesn't support '" + type.name() + "'",
-                "Try using a different material or update your server to a newer version!");
-        }
-
+        ItemStack itemStack = data.of("Type").assertExists().getMaterialAsItem().get();
         ItemMeta itemMeta = itemStack.getItemMeta();
         if (itemMeta == null) {
             throw data.exception("Type", "Did you use air as a material? This is not allowed!",
-                SerializerException.forValue(type));
+                "Found item: " + itemStack);
         }
 
-        String name = data.of("Name").getAdventure(null);
+        String name = data.of("Name").getAdventure().orElse(null);
         if (name != null) {
-            Component component = MechanicsCore.getPlugin().message.deserialize("<!italic>" + name);
-            AdventureUtil.setName(itemMeta, component);
+            AdventureUtil.setNameUnparsed(itemMeta, name);
         }
 
-        List<?> lore = data.of("Lore").assertType(List.class).get(null);
+        List<?> lore = data.of("Lore").get(List.class).orElse(null);
         if (lore != null) {
             AdventureUtil.setLoreUnparsed(itemMeta, lore);
         }
 
-        short durability = (short) data.of("Durability").assertPositive().getInt(-99);
-        if (durability != -99) {
-            if (MinecraftVersions.UPDATE_AQUATIC.isAtLeast()) {
-                ((org.bukkit.inventory.meta.Damageable) itemMeta).setDamage(durability);
-            } else {
-                itemStack.setDurability(durability);
-            }
-        }
-
-        boolean unbreakable = data.of("Unbreakable").getBool(false);
+        boolean unbreakable = data.of("Unbreakable").getBool().orElse(false);
         itemMeta.setUnbreakable(unbreakable);
 
-        if (data.has("Custom_Model_Data") && MinecraftVersions.VILLAGE_AND_PILLAGE.isAtLeast()) {
-            itemMeta.setCustomModelData(data.of("Custom_Model_Data").assertExists().getInt());
-        }
+        OptionalInt customModelData = data.of("Custom_Model_Data").getInt();
+        customModelData.ifPresent(itemMeta::setCustomModelData);
 
-        if (data.has("Max_Stack_Size")) {
-            if (!MinecraftVersions.TRAILS_AND_TAILS.get(5).isAtLeast()) {
-                throw data.exception("Max_Stack_Size", "Tried to use max stack size before MC 1.20.5!",
-                    "The max stack size was added in Minecraft version 1.20.5!",
-                    "Your version: " + MinecraftVersions.getCURRENT());
+        OptionalInt maxStackSize = data.of("Max_Stack_Size").assertRange(1, 99).getInt();
+        maxStackSize.ifPresent(itemMeta::setMaxStackSize);
+
+        Optional<Boolean> enchantmentGlintOverride = data.of("Enchantment_Glint_Override").getBool();
+        enchantmentGlintOverride.ifPresent(itemMeta::setEnchantmentGlintOverride);
+
+        Optional<String> damageResistantInput = data.of("Damage_Resistant").get(String.class);
+        if (damageResistantInput.isPresent()) {
+            if (!MinecraftVersions.TRICKY_TRIALS.get(2).isAtLeast()) {
+                throw data.exception("Damage_Resistant", "Tried to use damage resistance before MC 1.21.2!",
+                    "The damage resistance option was added in Minecraft version 1.21.2!",
+                    "Your version: " + MinecraftVersions.getCurrent());
             }
 
-            int newStackSize = data.of("Max_Stack_Size").assertExists().assertRange(1, 99).getInt();
-            itemMeta.setMaxStackSize(newStackSize);
+            NamespacedKey damageKey = NamespacedKey.fromString(damageResistantInput.get());
+            Tag<DamageType> damageTag = Bukkit.getTag(DamageTypeTags.REGISTRY_DAMAGE_TYPES, damageKey, DamageType.class);
+            itemMeta.setDamageResistant(damageTag);
         }
 
-        if (data.has("Enchantment_Glint_Override")) {
-            if (!MinecraftVersions.TRAILS_AND_TAILS.get(5).isAtLeast()) {
-                throw data.exception("Enchantment_Glint_Override", "Tried to use enchantment glint override before MC 1.20.5!",
-                    "The enchantment glint override component was added in Minecraft version 1.20.5!",
-                    "Your version: " + MinecraftVersions.getCURRENT());
-            }
+        List<List<Optional<Object>>> enchantments = data.ofList("Enchantments")
+            .addArgument(new RegistryValueSerializer<>(Enchantment.class, true))
+            .requireAllPreviousArgs()
+            .addArgument(new IntSerializer(1))
+            .assertList();
 
-            boolean glintOverride = data.of("Enchantment_Glint_Override").assertExists().getBool();
-            itemMeta.setEnchantmentGlintOverride(glintOverride);
+        for (List<Optional<Object>> split : enchantments) {
+            List<Enchantment> enchants = (List<Enchantment>) split.get(0).get();
+            int enchantmentLevel = (int) split.get(1).orElse(1);
+
+            for (Enchantment enchantment : enchants) {
+                itemMeta.addEnchant(enchantment, enchantmentLevel - 1, true);
+            }
         }
 
-        if (data.has("Is_Fire_Resistant")) {
-            if (!MinecraftVersions.TRAILS_AND_TAILS.get(5).isAtLeast()) {
-                throw data.exception("Is_Fire_Resistant", "Tried to use fire resistance before MC 1.20.5!",
-                    "The fire resistance component was added in Minecraft version 1.20.5!",
-                    "Your version: " + MinecraftVersions.getCURRENT());
+        if (data.has("Durability")) {
+            if (!(itemMeta instanceof org.bukkit.inventory.meta.Damageable damageable)) {
+                throw data.exception("Durability", "Tried to set durability on a non-damageable item!",
+                    "Your item: " + itemStack);
+            }
+            if (data.of("Max_Stack_Size").getInt().orElse(1) != 1) {
+                throw data.exception("Max_Stack_Size", "Tried to use 'Durability' feature when the 'Max_Stack_Size' was > 1!",
+                    "The 'Durability' feature only works on items with a 'Max_Stack_Size' of 1!");
+            }
+            if (data.has("Unbreakable")) {
+                throw data.exception("Unbreakable", "Tried to use 'Durability' feature when the item was unbreakable!",
+                    "The 'Durability' feature only works on breakable items!");
             }
 
-            boolean fireResistant = data.of("Is_Fire_Resistant").assertExists().getBool();
-            itemMeta.setFireResistant(fireResistant);
+            damageable.setMaxStackSize(1);
+            damageable.setMaxDamage(data.of("Durability.Max_Damage").assertExists().assertRange(0, null).getInt().getAsInt());
+            damageable.setDamage(data.of("Durability.Damage").assertRange(0, null).getInt().orElse(0));
         }
 
-        List<String[]> enchantments = data.ofList("Enchantments")
-            .addArgument(Enchantment.class, true, true)
-            .addArgument(int.class, true)
-            .assertList().get();
+        if (data.has("Tool")) {
+            ToolComponent tool = itemMeta.getTool();
+            tool.setDefaultMiningSpeed((float) data.of("Tool.Default_Mining_Speed").getDouble().orElse(1.0));
+            tool.setDamagePerBlock(data.of("Tool.Damage_Per_Block").getInt().orElse(1));
 
-        if (enchantments != null) {
-            for (String[] split : enchantments) {
-                Enchantment enchant;
+            List<List<Optional<Object>>> rulesData = data.ofList("Tool.Rules")
+                .addArgument(new RegistryValueSerializer<>(BlockType.class, true))
+                .addArgument(new DoubleSerializer())
+                .requireAllPreviousArgs()
+                .addArgument(new BooleanSerializer())
+                .assertList();
 
-                if (MinecraftVersions.UPDATE_AQUATIC.isAtLeast()) {
-                    enchant = Enchantment.getByKey(org.bukkit.NamespacedKey.minecraft(split[0].trim().toLowerCase(Locale.ROOT)));
-                } else {
-                    enchant = Enchantment.getByName(split[0].trim().toLowerCase(Locale.ROOT));
-                }
-                if (enchant == null) {
-                    throw new SerializerOptionsException("Item", "Enchantment",
-                        Arrays.stream(Enchantment.values())
-                            .map(ench -> MinecraftVersions.UPDATE_AQUATIC.isAtLeast() ? ench.getKey().getKey() : ench.getName())
-                            .collect(Collectors.toList()),
-                        split[0], data.of("Enchantments").getLocation());
-                }
-                int enchantmentLevel = Integer.parseInt(split[1]);
-                itemMeta.addEnchant(enchant, enchantmentLevel - 1, true);
+            for (List<Optional<Object>> split : rulesData) {
+                List<BlockType> blocks = (List<BlockType>) split.get(0).get();
+                double speed = (double) split.get(1).get();
+                boolean isDrop = (boolean) split.get(2).orElse(true);
+
+                Collection<Material> mappedBlocks = blocks.stream().map(BlockType::asMaterial).toList();
+                tool.addRule(mappedBlocks, (float) speed, isDrop);
             }
+
+            itemMeta.setTool(tool);
+        }
+
+        if (data.has("Food")) {
+            FoodComponent food = itemMeta.getFood();
+            food.setNutrition(data.of("Food.Nutrition").assertExists().assertRange(0, null).getInt().getAsInt());
+            food.setSaturation((float) data.of("Food.Saturation").assertRange(0, null).getDouble().orElse(0.0));
+            food.setCanAlwaysEat(data.of("Food.Can_Always_Eat").getBool().orElse(false));
+
+            itemMeta.setFood(food);
+        }
+
+        if (data.has("Equippable")) {
+            EquippableComponent armor = itemMeta.getEquippable();
+            armor.setSlot(data.of("Equippable.Slot").assertExists().getEnum(EquipmentSlot.class).get());
+            armor.setEquipSound(data.of("Equippable.Equip_Sound").getBukkitRegistry(Sound.class).orElse(null));
+            armor.setModel(data.of("Equippable.Model").getNamespacedKey().orElse(null));
+            armor.setCameraOverlay(data.of("Equippable.Camera_Overlay").getNamespacedKey().orElse(null));
+            armor.setDispensable(data.of("Equippable.Dispensable").getBool().orElse(true));
+            armor.setSwappable(data.of("Equippable.Swappable").getBool().orElse(true));
+            armor.setDamageOnHurt(data.of("Equippable.Damage_On_Hurt").getBool().orElse(true));
+
+            List<EntityType> entityData = data.ofList("Equippable.Entities")
+                .addArgument(new RegistryValueSerializer<>(EntityType.class, true))
+                .requireAllPreviousArgs()
+                .assertList()
+                .stream()
+                .map(split -> (List<EntityType>) split.get(0).get())
+                .flatMap(List::stream)
+                .toList();
+
+            armor.setAllowedEntities(entityData.isEmpty() ? null : entityData);
+
+            itemMeta.setEquippable(armor);
         }
 
         itemStack.setItemMeta(itemMeta);
 
         // #198
         data.ofList("Tags")
-            .addArgument(String.class, true)
-            .addArgument(int.class, true)
-            .assertList().stream().forEach(split -> {
-                CompatibilityAPI.getNBTCompatibility().setInt(itemStack, "Custom", split[0], Integer.parseInt(split[1]));
+            .addArgument(new StringSerializer())
+            .requireAllPreviousArgs()
+            .addArgument(new IntSerializer())
+            .assertList().forEach(split -> {
+                String tag = (String) split.get(0).get();
+                int value = (int) split.get(1).orElse(1);
+                CompatibilityAPI.getNBTCompatibility().setInt(itemStack, "Custom", tag, value);
             });
 
-        List<String[]> attributes = data.ofList("Attributes")
-            .addArgument(AttributeType.class, true)
-            .addArgument(double.class, true)
-            .addArgument(NBTCompatibility.AttributeSlot.class, false)
-            .assertList().get();
+        // TODO: Spigot will surely improve this
+        Map<String, EquipmentSlotGroup> slotGroupsByName = new HashMap<>();
+        slotGroupsByName.put("any", EquipmentSlotGroup.ANY);
+        slotGroupsByName.put("mainhand", EquipmentSlotGroup.MAINHAND);
+        slotGroupsByName.put("offhand", EquipmentSlotGroup.OFFHAND);
+        slotGroupsByName.put("hand", EquipmentSlotGroup.HAND);
+        slotGroupsByName.put("head", EquipmentSlotGroup.HEAD);
+        slotGroupsByName.put("chest", EquipmentSlotGroup.CHEST);
+        slotGroupsByName.put("legs", EquipmentSlotGroup.LEGS);
+        slotGroupsByName.put("feet", EquipmentSlotGroup.FEET);
+        slotGroupsByName.put("armor", EquipmentSlotGroup.ARMOR);
 
-        if (attributes != null) {
-            for (String[] split : attributes) {
+        List<List<Optional<Object>>> attributesData = data.ofList("Attributes")
+            .addArgument(new RegistryValueSerializer<>(Attribute.class, true))
+            .addArgument(new DoubleSerializer())
+            .requireAllPreviousArgs()
+            .addArgument(new ByNameSerializer<>(EquipmentSlotGroup.class, slotGroupsByName))
+            .addArgument(new EnumValueSerializer<>(AttributeModifier.Operation.class, false))
+            .assertList();
 
-                AttributeType attribute = EnumUtil.parseEnums(AttributeType.class, split[0]).get(0);
-                NBTCompatibility.AttributeSlot slot = split.length > 2 ? EnumUtil.parseEnums(NBTCompatibility.AttributeSlot.class, split[2]).get(0) : null;
-                double amount = Double.parseDouble(split[1]);
+        for (List<Optional<Object>> split : attributesData) {
+            List<Attribute> attributes = (List<Attribute>) split.get(0).get();
+            double amount = (double) split.get(1).get();
+            EquipmentSlotGroup slot = (EquipmentSlotGroup) split.get(2).orElse(EquipmentSlotGroup.ANY);
+            AttributeModifier.Operation operation = ((List<AttributeModifier.Operation>) split.get(3).orElse(List.of(AttributeModifier.Operation.ADD_NUMBER))).getFirst();
 
-                CompatibilityAPI.getNBTCompatibility().setAttribute(itemStack, attribute, slot, amount);
+            for (Attribute attribute : attributes) {
+
+                // Attributes need a completely unique key to avoid attributes
+                // overridding each other.
+                NamespacedKey key = new NamespacedKey(MechanicsCore.getPlugin(), attribute.getKey().getKey() + "-" + slot);
+                AttributeModifier modifier = new AttributeModifier(key, amount, operation, slot);
+                itemMeta.addAttributeModifier(attribute, modifier);
             }
         }
 
         // Add flags after attributes due to a bug introduced in Spigot 1.20.5, see
         // https://github.com/PaperMC/Paper/issues/10693
-        boolean hideFlags = data.of("Hide_Flags").getBool(false);
+        boolean hideFlags = data.of("Hide_Flags").getBool().orElse(false);
         if (hideFlags) {
             ItemMeta temp = itemStack.getItemMeta();
             temp.addItemFlags(ItemFlag.values());
             itemStack.setItemMeta(temp);
         }
 
-        String owningPlayer = data.of("Skull_Owning_Player").assertType(String.class).get(null);
+        String owningPlayer = data.of("Skull_Owning_Player").get(String.class).orElse(null);
         if (owningPlayer != null) {
             try {
                 int splitIndex = owningPlayer.indexOf(" ");
@@ -335,79 +375,76 @@ public class ItemSerializer implements Serializer<ItemStack> {
                 itemStack.setItemMeta(skullMeta);
             } catch (ClassCastException e) {
                 throw data.exception("Skull_Owning_Player", "Tried to use Skulls when the item wasn't a player head!",
-                    SerializerException.forValue(type));
+                    "Found item: " + itemStack);
             }
         }
 
         if (data.has("Potion_Color")) {
             try {
-                Color color = data.of("Potion_Color").assertExists().serialize(new ColorSerializer()).getColor();
+                Color color = data.of("Potion_Color").assertExists().serialize(ColorSerializer.class).get();
                 PotionMeta potionMeta = (PotionMeta) itemStack.getItemMeta();
                 potionMeta.setColor(color);
                 itemStack.setItemMeta(potionMeta);
             } catch (ClassCastException e) {
                 throw data.exception("Potion_Color", "Tried to use Potion Color when the item wasn't a potion!",
-                    SerializerException.forValue(type));
+                    "Found item: " + itemStack);
             }
         }
 
         if (data.has("Leather_Color")) {
             try {
-                Color color = data.of("Leather_Color").assertExists().serialize(new ColorSerializer()).getColor();
+                Color color = data.of("Leather_Color").assertExists().serialize(ColorSerializer.class).get();
                 LeatherArmorMeta meta = (LeatherArmorMeta) itemStack.getItemMeta();
                 meta.setColor(color);
                 itemStack.setItemMeta(meta);
             } catch (ClassCastException e) {
                 throw data.exception("Leather_Color", "Tried to use Leather Color when the item wasn't leather armor!",
-                    SerializerException.forValue(type));
+                    "Found item: " + itemStack);
             }
         }
 
-        if (MinecraftVersions.TRAILS_AND_TAILS.isAtLeast() && itemStack.getItemMeta() instanceof ArmorMeta armor) {
-
-            // If you have one, you NEED both
-            boolean hasOneOfPatternOrMaterial = data.has("Trim_Pattern") || data.has("Trim_Material");
-
-            TrimPattern pattern = data.of("Trim_Pattern").assertExists(hasOneOfPatternOrMaterial).getKeyed(Registry.TRIM_PATTERN, null);
-            TrimMaterial material = data.of("Trim_Material").assertExists(hasOneOfPatternOrMaterial).getKeyed(Registry.TRIM_MATERIAL, null);
-
-            if (pattern != null && material != null) {
-                armor.setTrim(new ArmorTrim(material, pattern));
-                itemStack.setItemMeta(armor);
+        boolean hasOneOfPatternOrMaterial = data.has("Trim_Pattern") || data.has("Trim_Material");
+        if (hasOneOfPatternOrMaterial && itemStack.getItemMeta() instanceof ArmorMeta armor) {
+            if (MinecraftVersions.TRAILS_AND_TAILS.isBelow()) {
+                throw data.exception("Trim_Pattern", "Tried to use trim pattern before MC 1.20!",
+                    "The trim pattern was added in Minecraft version 1.20!");
             }
+
+            TrimPattern pattern = data.of("Trim_Pattern").assertExists().getBukkitRegistry(TrimPattern.class).get();
+            TrimMaterial material = data.of("Trim_Material").assertExists().getBukkitRegistry(TrimMaterial.class).get();
+            armor.setTrim(new ArmorTrim(material, pattern));
+            itemStack.setItemMeta(armor);
         }
 
         if (data.has("Firework")) {
-
             try {
                 // <FireworkEffect.Type>-<Color>-<Boolean=Trail>-<Boolean=Flicker>-<Color=Fade>
-                List<String[]> list = data.ofList("Firework.Effects")
-                    .addArgument(FireworkEffect.Type.class, true)
-                    .addArgument(ColorSerializer.class, true, true)
-                    .addArgument(boolean.class, false)
-                    .addArgument(boolean.class, false)
-                    .addArgument(ColorSerializer.class, false)
-                    .assertExists().assertList().get();
+                List<List<Optional<Object>>> list = data.ofList("Firework.Effects")
+                    .addArgument(new EnumValueSerializer<>(FireworkEffect.Type.class, false))
+                    .addArgument(new CsvSerializer<>(new ColorSerializer())) // colors
+                    .requireAllPreviousArgs()
+                    .addArgument(new BooleanSerializer()) // isTrail
+                    .addArgument(new BooleanSerializer()) // isFlicker
+                    .addArgument(new CsvSerializer<>(new ColorSerializer())) // fadeColors
+                    .assertExists().assertList();
 
                 FireworkMeta meta = (FireworkMeta) itemMeta;
-                meta.setPower(data.of("Firework.Power").assertPositive().getInt(1));
-                for (String[] split : list) {
+                meta.setPower(data.of("Firework.Power").assertRange(0, 255).getInt().orElse(1));
+                for (List<Optional<Object>> split : list) {
 
                     FireworkEffect.Builder builder = FireworkEffect.builder();
-                    builder.with(FireworkEffect.Type.valueOf(split[0]));
+                    builder.with((FireworkEffect.Type) split.get(0).get());
 
                     // Handle initial colors
-                    String[] colors = split[1].split(", ?");
-                    for (String color : colors)
-                        builder.withColor(ColorSerializer.fromString(data.move("Firework.Effects"), color));
+                    List<Color> colors = (List<Color>) split.get(1).get();
+                    builder.withColor(colors);
 
-                    builder.trail(split.length > 2 && split[2].equalsIgnoreCase("true"));
-                    builder.flicker(split.length > 3 && split[3].equalsIgnoreCase("true"));
+                    builder.trail((boolean) split.get(2).orElse(true));
+                    builder.flicker((boolean) split.get(3).orElse(true));
 
                     // Handle the fade colors
-                    String[] fadeColors = split.length > 4 ? split[4].split(", ?") : new String[0];
-                    for (String color : fadeColors)
-                        builder.withFade(ColorSerializer.fromString(data.move("Firework.Effects"), color));
+                    List<Color> fadeColors = (List<Color>) split.get(4).orElse(List.of());
+                    builder.withFade(fadeColors);
 
                     // Add the newly constructed firework effect to the list.
                     meta.addEffect(builder.build());
@@ -415,7 +452,7 @@ public class ItemSerializer implements Serializer<ItemStack> {
                 itemStack.setItemMeta(meta);
             } catch (ClassCastException ex) {
                 throw data.exception("Firework", "Tried to use Firework when the item wasn't a firework rocket!",
-                    SerializerException.forValue(type));
+                    "Found item: " + itemStack);
             }
         }
 
@@ -428,7 +465,7 @@ public class ItemSerializer implements Serializer<ItemStack> {
             try {
                 BlockDataMeta meta = (BlockDataMeta) itemStack.getItemMeta();
                 Levelled levelled = (Levelled) meta.getBlockData(Material.LIGHT);
-                int level = data.of("Light_Level").assertRange(0, levelled.getMaximumLevel()).getInt(0);
+                int level = data.of("Light_Level").assertRange(0, levelled.getMaximumLevel()).getInt().orElse(0);
                 levelled.setLevel(level);
                 meta.setBlockData(levelled);
                 itemStack.setItemMeta(meta);
@@ -437,7 +474,7 @@ public class ItemSerializer implements Serializer<ItemStack> {
             }
         }
 
-        if (data.of("Deny_Use_In_Crafting").getBool(false)) {
+        if (data.of("Deny_Use_In_Crafting").getBool().orElse(false)) {
             CompatibilityAPI.getNBTCompatibility().setInt(itemStack, "MechanicsCore", "deny-crafting", 1);
         }
 
@@ -450,12 +487,12 @@ public class ItemSerializer implements Serializer<ItemStack> {
 
         // Create a copy of the item with a set amount to be the result of the
         // crafting recipe.
-        int resultAmount = data.of("Recipe.Output_Amount").assertRange(1, 64).getInt(1);
+        int resultAmount = data.of("Recipe.Output_Amount").assertRange(1, 64).getInt().orElse(1);
         ItemStack result = itemStack.clone();
         result.setAmount(resultAmount);
 
         // Namespaced keys for recipes were added in MC 1.12
-        ShapedRecipe recipe = new ShapedRecipe(new NamespacedKey(MechanicsCore.getPlugin(), data.key), result);
+        ShapedRecipe recipe = new ShapedRecipe(new NamespacedKey(MechanicsCore.getPlugin(), data.getKey()), result);
 
         // Bukkit.getRecipe was added in 1.16. We have a try-catch block
         // below in this method to handle 1.12 through 1.15
@@ -467,10 +504,14 @@ public class ItemSerializer implements Serializer<ItemStack> {
         // - ABC
         // - DEF
         // - GHI
-        List<Object> shape = data.of("Recipe.Shape").assertExists().assertType(List.class).get();
+        List<Object> shape = data.of("Recipe.Shape").assertExists().get(List.class).get();
         String[] shapeArr = shape.stream().map(Object::toString).toArray(String[]::new);
-        if (shape.size() < 1 || shape.size() > 3)
-            throw new SerializerRangeException(this, 1, shape.size(), 3, data.of("Recipe.Shape").getLocation());
+        if (shape.isEmpty() || shape.size() > 3) {
+            throw SerializerException.builder()
+                .locationRaw(data.of("Recipe.Shape").getLocation())
+                .addMessage("Expected a list of either 1, 2, or 3 strings to make the recipe")
+                .buildInvalidRange(shape.size(), 1, 3);
+        }
 
         Set<Character> ingredientChars = new HashSet<>();
         for (int i = 0; i < shapeArr.length; i++) {
@@ -480,8 +521,12 @@ public class ItemSerializer implements Serializer<ItemStack> {
             if (str.length() > 3)
                 shapeArr[i] = str = str.trim();
 
-            if (str.length() < 1 || str.length() > 3)
-                throw new SerializerRangeException(this, 1, shape.size(), 3, data.of("Recipe.Shape").getLocation());
+            if (str.isEmpty() || str.length() > 3) {
+                throw SerializerException.builder()
+                    .locationRaw(data.of("Recipe.Shape").getLocation())
+                    .addMessage("Each string in the shape must be between 1 and 3 characters long")
+                    .buildInvalidRange(str.length(), 1, 3);
+            }
 
             for (char c : str.toCharArray())
                 ingredientChars.add(c);
@@ -493,7 +538,7 @@ public class ItemSerializer implements Serializer<ItemStack> {
             recipe.shape(shapeArr);
         } catch (Throwable ex) {
             throw data.exception("Recipe.Shape", "Recipe Shape was formatted incorrectly",
-                ex.getMessage(), SerializerException.forValue(shape));
+                ex.getMessage(), "Found shape: " + shape);
         }
 
         // Shaped recipes in 1.12 and lower just use a map of
@@ -507,16 +552,12 @@ public class ItemSerializer implements Serializer<ItemStack> {
             if (c == ' ')
                 continue;
 
-            ItemStack item = data.of("Recipe.Ingredients." + c).assertExists().serialize(new ItemSerializer());
-
-            if (MinecraftVersions.UPDATE_AQUATIC.isAtLeast())
-                ingredients.put(c, new RecipeChoice.ExactChoice(item));
-            else
-                ingredients.put(c, item);
+            ItemStack item = data.of("Recipe.Ingredients." + c).assertExists().serialize(ItemSerializer.class).get();
+            ingredients.put(c, new RecipeChoice.ExactChoice(item));
         }
 
         // Finalize and register the new recipe.
-        ReflectionUtil.setField(ingredientsField, recipe, ingredients);
+        ingredientsField.set(recipe, ingredients);
         try {
             Bukkit.addRecipe(recipe);
         } catch (IllegalStateException ex) {
