@@ -7,13 +7,16 @@ import me.deecaad.weaponmechanics.WeaponMechanics;
 import me.deecaad.weaponmechanics.weapon.damage.DamageDropoff;
 import me.deecaad.weaponmechanics.weapon.damage.DamageModifier;
 import me.deecaad.weaponmechanics.weapon.damage.DamagePoint;
+import me.deecaad.weaponmechanics.weapon.damage.MeleeDamageSource;
+import me.deecaad.weaponmechanics.weapon.damage.ProjectileDamageSource;
+import me.deecaad.weaponmechanics.weapon.damage.WeaponDamageSource;
 import me.deecaad.weaponmechanics.wrappers.EntityWrapper;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.event.Cancellable;
 import org.bukkit.event.HandlerList;
 import org.bukkit.inventory.EquipmentSlot;
-import org.bukkit.inventory.ItemStack;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.util.LinkedList;
 import java.util.List;
@@ -27,18 +30,15 @@ public class WeaponDamageEntityEvent extends WeaponEvent implements Cancellable 
 
     private static final HandlerList HANDLERS = new HandlerList();
 
+    private final WeaponDamageSource source;
     private final LivingEntity victim;
     private double baseDamage;
     private double finalDamage;
-    private boolean isBackstab;
     private double critChance;
     private double critDamage;
-    private DamagePoint point;
     private int armorDamage;
     private int fireTicks;
-    private boolean isExplosion;
     private DamageDropoff dropoff;
-    private double distanceTravelled;
     private final List<DamageModifier> damageModifiers;
 
     private Mechanics damageMechanics;
@@ -54,28 +54,24 @@ public class WeaponDamageEntityEvent extends WeaponEvent implements Cancellable 
     private boolean wasCritical;
     private boolean isCancelled;
 
-    public WeaponDamageEntityEvent(String weaponTitle, ItemStack weaponItem, LivingEntity weaponUser, EquipmentSlot hand,
-        LivingEntity victim, double baseDamage, boolean isBackstab, double critChance,
-        DamagePoint point, int armorDamage, int fireTicks, boolean isExplosion,
-        double distanceTravelled, DamageModifier damageModifier, Mechanics damageMechanics,
+    public WeaponDamageEntityEvent(WeaponDamageSource source, EquipmentSlot hand, LivingEntity victim,
+        double baseDamage, double critChance, int armorDamage, int fireTicks,
+        DamageModifier damageModifier, Mechanics damageMechanics,
         Mechanics killMechanics, Mechanics backstabMechanics, Mechanics criticalHitMechanics,
         Mechanics headMechanics, Mechanics bodyMechanics, Mechanics armsMechanics,
         Mechanics legsMechanics, Mechanics feetMechanics) {
 
-        super(weaponTitle, weaponItem, weaponUser, hand);
+        super(source.getWeaponTitle(), source.getWeaponStack(), source.getShooter(), hand);
 
+        this.source = source;
         this.victim = victim;
         this.baseDamage = baseDamage;
         this.finalDamage = Double.NaN;
-        this.isBackstab = isBackstab;
         this.critChance = critChance;
         this.critDamage = WeaponMechanics.getConfigurations().getDouble(weaponTitle + ".Damage.Critical_Hit.Bonus_Damage");
-        this.point = point;
         this.armorDamage = armorDamage;
         this.fireTicks = fireTicks;
-        this.isExplosion = isExplosion;
         this.dropoff = WeaponMechanics.getConfigurations().getObject(weaponTitle + ".Damage.Dropoff", DamageDropoff.class);
-        this.distanceTravelled = distanceTravelled;
 
         this.damageMechanics = damageMechanics;
         this.killMechanics = killMechanics;
@@ -91,12 +87,16 @@ public class WeaponDamageEntityEvent extends WeaponEvent implements Cancellable 
         this.damageModifiers.add(damageModifier);
     }
 
+    public @NotNull WeaponDamageSource getSource() {
+        return source;
+    }
+
     /**
      * Who is being damaged by the weapon.
      *
      * @return The non-null entity being damaged.
      */
-    public LivingEntity getVictim() {
+    public @NotNull LivingEntity getVictim() {
         return victim;
     }
 
@@ -135,26 +135,27 @@ public class WeaponDamageEntityEvent extends WeaponEvent implements Cancellable 
 
             double damage = this.baseDamage;
 
-            if (dropoff != null && !isExplosion)
-                damage += dropoff.getDamage(distanceTravelled);
-            if (point != null)
-                damage += config.getDouble(weaponTitle + ".Damage." + point.getReadable() + ".Bonus_Damage");
+            if (dropoff != null && source instanceof ProjectileDamageSource projectileSource)
+                damage += dropoff.getDamage(projectileSource.getProjectile().getDistanceTravelled());
+            if (source.getDamagePoint() != null)
+                damage += config.getDouble(weaponTitle + ".Damage." + source.getDamagePoint().getReadable() + ".Bonus_Damage");
             if (RandomUtil.chance(critChance)) {
                 damage += critDamage;
                 wasCritical = true;
             }
-            if (isBackstab)
+            if ((source instanceof MeleeDamageSource meleeSource) && meleeSource.isBackStab())
                 damage += config.getDouble(weaponTitle + ".Damage.Backstab.Bonus_Damage");
 
             EntityWrapper victimWrapper = WeaponMechanics.getEntityWrapper(victim);
 
             double rate = 1.0;
+            boolean isBackStab = source instanceof MeleeDamageSource meleeSource && meleeSource.isBackStab();
             for (DamageModifier modifier : damageModifiers) {
-                rate += modifier.getRate(victimWrapper, getPoint(), isBackstab()) - 1;
+                rate += modifier.getRate(victimWrapper, getPoint(), isBackStab) - 1;
             }
 
             // Clamping to the base damage
-            rate = damageModifiers.get(0).clamp(rate);
+            rate = damageModifiers.getFirst().clamp(rate);
 
             return finalDamage = damage * rate;
         }
@@ -173,47 +174,6 @@ public class WeaponDamageEntityEvent extends WeaponEvent implements Cancellable 
     }
 
     /**
-     * Returns true if the damage came from behind the victim.
-     *
-     * @return true is this is a backstab.
-     */
-    public boolean isBackstab() {
-        return isBackstab;
-    }
-
-    /**
-     * Sets whether this was a backstab. Resets the result of {@link #getFinalDamage()}.
-     *
-     * @param backstab true if this is a backstab.
-     */
-    public void setBackstab(boolean backstab) {
-        this.finalDamage = Double.NaN;
-        this.wasCritical = false;
-        this.isBackstab = backstab;
-    }
-
-    /**
-     * Returns true if the damage is critical (usually determined by chance).
-     *
-     * @return true if this is critical hit.
-     */
-    @Deprecated(forRemoval = true)
-    public boolean isCritical() {
-        return RandomUtil.chance(critChance);
-    }
-
-    /**
-     * Sets whether this is a critical hit. Resets the result of {@link #getFinalDamage()}.
-     *
-     * @param isCritical true if this is a critical hit.
-     */
-    public void setCritical(boolean isCritical) {
-        this.finalDamage = Double.NaN;
-        this.wasCritical = false;
-        this.critChance = isCritical ? 1.0 : 0.0;
-    }
-
-    /**
      * Returns the chance of a critical hit.
      *
      * @return The chance of a critical hit.
@@ -223,11 +183,22 @@ public class WeaponDamageEntityEvent extends WeaponEvent implements Cancellable 
     }
 
     /**
+     * Sets the chance of a critical hit. Resets the result of {@link #getFinalDamage()}.
+     *
+     * @param critChance The chance of a critical hit.
+     */
+    public double setCritChance(double critChance) {
+        this.finalDamage = Double.NaN;
+        this.wasCritical = false;
+        return this.critChance = critChance;
+    }
+
+    /**
      * Returns true if the damage from the last calculation was a critical hit.
      *
      * @return true if this was a critical hit.
      */
-    public boolean isWasCritical() {
+    public boolean wasCritical() {
         return wasCritical;
     }
 
@@ -252,35 +223,12 @@ public class WeaponDamageEntityEvent extends WeaponEvent implements Cancellable 
     }
 
     /**
-     * Sets the chance of a critical hit. Resets the result of {@link #getFinalDamage()}.
-     *
-     * @param critChance The chance of a critical hit.
-     */
-    public double setCritChance(double critChance) {
-        this.finalDamage = Double.NaN;
-        this.wasCritical = false;
-        return this.critChance = critChance;
-    }
-
-    /**
      * Gets the body part that was hit (head/arms/chest/etc).
      *
      * @return The nullable damage point.
      */
-    public DamagePoint getPoint() {
-        return point;
-    }
-
-    /**
-     * Sets the body part that was hit (head/arms/chest/etc). Resets the result of
-     * {@link #getFinalDamage()}.
-     *
-     * @param point The nullable damage point.
-     */
-    public void setPoint(DamagePoint point) {
-        this.finalDamage = Double.NaN;
-        this.wasCritical = false;
-        this.point = point;
+    public @Nullable DamagePoint getPoint() {
+        return source.getDamagePoint();
     }
 
     /**
@@ -322,45 +270,27 @@ public class WeaponDamageEntityEvent extends WeaponEvent implements Cancellable 
         this.fireTicks = fireTicks;
     }
 
-    public boolean isExplosion() {
-        return isExplosion;
-    }
-
-    public void setExplosion(boolean explosion) {
-        isExplosion = explosion;
-        this.wasCritical = false;
-        finalDamage = Double.NaN;
-    }
-
-    public DamageDropoff getDropoff() {
+    public @Nullable DamageDropoff getDropoff() {
         return dropoff;
     }
 
-    public void setDropoff(DamageDropoff dropoff) {
+    public void setDropoff(@Nullable DamageDropoff dropoff) {
         this.dropoff = dropoff;
     }
 
-    public double getDistanceTravelled() {
-        return distanceTravelled;
-    }
-
-    public void setDistanceTravelled(double distanceTravelled) {
-        this.distanceTravelled = distanceTravelled;
-    }
-
-    public void addDamageModifier(DamageModifier modifier) {
+    public void addDamageModifier(@Nullable DamageModifier modifier) {
         damageModifiers.add(modifier);
     }
 
-    public List<DamageModifier> getDamageModifiers() {
+    public @NotNull List<DamageModifier> getDamageModifiers() {
         return damageModifiers;
     }
 
-    public Mechanics getDamageMechanics() {
+    public @Nullable Mechanics getDamageMechanics() {
         return damageMechanics;
     }
 
-    public void setDamageMechanics(Mechanics damageMechanics) {
+    public void setDamageMechanics(@Nullable Mechanics damageMechanics) {
         if (this.damageMechanics != null)
             this.damageMechanics.clearDirty(); // clear any modifications
         this.damageMechanics = damageMechanics;
@@ -370,77 +300,77 @@ public class WeaponDamageEntityEvent extends WeaponEvent implements Cancellable 
         return killMechanics;
     }
 
-    public void setKillMechanics(Mechanics killMechanics) {
+    public void setKillMechanics(@Nullable Mechanics killMechanics) {
         if (this.killMechanics != null)
             this.killMechanics.clearDirty(); // clear any modifications
         this.killMechanics = killMechanics;
     }
 
-    public Mechanics getBackstabMechanics() {
+    public @Nullable Mechanics getBackstabMechanics() {
         return backstabMechanics;
     }
 
-    public void setBackstabMechanics(Mechanics backstabMechanics) {
+    public void setBackstabMechanics(@Nullable Mechanics backstabMechanics) {
         if (this.backstabMechanics != null)
             this.backstabMechanics.clearDirty(); // clear any modifications
         this.backstabMechanics = backstabMechanics;
     }
 
-    public Mechanics getCriticalHitMechanics() {
+    public @Nullable Mechanics getCriticalHitMechanics() {
         return criticalHitMechanics;
     }
 
-    public void setCriticalHitMechanics(Mechanics criticalHitMechanics) {
+    public void setCriticalHitMechanics(@Nullable Mechanics criticalHitMechanics) {
         if (this.criticalHitMechanics != null)
             this.criticalHitMechanics.clearDirty(); // clear any modifications
         this.criticalHitMechanics = criticalHitMechanics;
     }
 
-    public Mechanics getHeadMechanics() {
+    public @Nullable Mechanics getHeadMechanics() {
         return headMechanics;
     }
 
-    public void setHeadMechanics(Mechanics headMechanics) {
+    public void setHeadMechanics(@Nullable Mechanics headMechanics) {
         if (this.headMechanics != null)
             this.headMechanics.clearDirty(); // clear any modifications
         this.headMechanics = headMechanics;
     }
 
-    public Mechanics getBodyMechanics() {
+    public @Nullable Mechanics getBodyMechanics() {
         return bodyMechanics;
     }
 
-    public void setBodyMechanics(Mechanics bodyMechanics) {
+    public void setBodyMechanics(@Nullable Mechanics bodyMechanics) {
         if (this.bodyMechanics != null)
             this.bodyMechanics.clearDirty(); // clear any modifications
         this.bodyMechanics = bodyMechanics;
     }
 
-    public Mechanics getArmsMechanics() {
+    public @Nullable Mechanics getArmsMechanics() {
         return armsMechanics;
     }
 
-    public void setArmsMechanics(Mechanics armsMechanics) {
+    public void setArmsMechanics(@Nullable Mechanics armsMechanics) {
         if (this.armsMechanics != null)
             this.armsMechanics.clearDirty(); // clear any modifications
         this.armsMechanics = armsMechanics;
     }
 
-    public Mechanics getLegsMechanics() {
+    public @Nullable Mechanics getLegsMechanics() {
         return legsMechanics;
     }
 
-    public void setLegsMechanics(Mechanics legsMechanics) {
+    public void setLegsMechanics(@Nullable Mechanics legsMechanics) {
         if (this.legsMechanics != null)
             this.legsMechanics.clearDirty(); // clear any modifications
         this.legsMechanics = legsMechanics;
     }
 
-    public Mechanics getFeetMechanics() {
+    public @Nullable Mechanics getFeetMechanics() {
         return feetMechanics;
     }
 
-    public void setFeetMechanics(Mechanics feetMechanics) {
+    public void setFeetMechanics(@Nullable Mechanics feetMechanics) {
         if (this.feetMechanics != null)
             this.feetMechanics.clearDirty(); // clear any modifications
         this.feetMechanics = feetMechanics;
@@ -457,11 +387,11 @@ public class WeaponDamageEntityEvent extends WeaponEvent implements Cancellable 
     }
 
     @Override
-    @NotNull public HandlerList getHandlers() {
+    public @NotNull HandlerList getHandlers() {
         return HANDLERS;
     }
 
-    public static HandlerList getHandlerList() {
+    public static @NotNull HandlerList getHandlerList() {
         return HANDLERS;
     }
 }
